--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿absl-py==2.4.0
+absl-py==2.4.0
 aioice==0.10.2
 aiortc==1.14.0
 altair==6.0.0
@@ -8,14 +8,13 @@ astunparse==1.6.3
 attrs==25.4.0
 audioop-lts==0.2.2
 av==16.1.0
-beautifulsoup4==4.14.3
-blinker==1.9.0
-streamlit
+beautifulsoup4==4.14.3streamlit
 opencv-python-headless
 ultralytics
 pillow
 numpy
 groq
+blinker==1.9.0
 cachetools==6.2.6
 certifi==2026.1.4
 cffi==2.0.0
@@ -26,6 +25,7 @@ comtypes==1.4.15
 contourpy==1.3.3
 cryptography==46.0.5
 cycler==0.12.1
+deepface==0.0.98
 distro==1.9.0
 dnspython==2.8.0
 docopt==0.6.2
@@ -141,6 +141,7 @@ sympy==1.14.0
 tenacity==9.1.4
 tensorboard==2.20.0
 tensorboard-data-server==0.7.2
+tensorflow==2.20.0
 termcolor==3.3.0
 tf_keras==2.20.1
 tifffile==2026.1.28
@@ -160,4 +161,3 @@ watchdog==6.0.0
 Werkzeug==3.1.5
 wheel==0.46.3
 wrapt==2.1.1
-
